Added a rest returning all distinct dates of the events, modified two images, months in events page made dynamic
