# api/swagger.yaml
@@ -609,6 +609,25 @@ paths:
         404:
           description: "Event not found"
       x-swagger-router-controller: "Event"
+  /events/eventsMonth:
+    get:
+      tags:
+      - "event"
+      summary: "Returns all the distinct months in events "
+      description: "Returns all the distinct months in events "
+      operationId: "eventsMonth"
+      produces:
+      - "application/json"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/Event"
+        400:
+          description: "Invalid category supplied"
+        404:
+          description: "Event not found"
+      x-swagger-router-controller: "Event"    
   /user:
     get:
       tags:
